# alscan

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  alscan-gui.spec  alscan.spec  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: feature-roadmap-handoff.md  fixture-inventory.md  guided-merge.md  three-way-gui-parity.md  three-way-validation-report.md  three-way-validation-summary.json  warning-audit-report.md
scripts/: check_als_policy.py
src/alscan/: __init__.py  __main__.py  cli.py  config.py  io_safety.py  models.py  parser.py  plugindirs.py  project.py  search.py  services.py  versioner.py  watch.py
src/alscan/checks/: __init__.py  duplicates.py  midi.py  misc.py  performance.py  plugins.py  project_hygiene.py  samples.py
src/alscan/gui/: __init__.py  app.py  compare_analysis.py  main_window.py  platform_utils.py  settings.py  theme.py  workers.py
src/alscan/gui/dialogs/: error_dialog.py
src/alscan/gui/pages/: batch_page.py  checks_page.py  compare_page.py  guided_merge_page.py  home_page.py  scan_page.py  settings_page.py  snapshots_page.py  three_way_page.py
src/alscan/gui/widgets/: compare_badge.py  compare_result_widget.py  drop_area.py  result_table.py
src/alscan/merge/: __init__.py  analysis.py  conflicts.py  executor.py  foundation.py  guided.py  inputs.py  manifest.py  operation.py  plan.py  report.py  semantics.py  session.py  verification.py
src/alscan/report/: csv.py  html.py  json.py  terminal.py
src/alscan/report/templates/: report.html
tests/: test_alscan.py  test_config.py  test_csv_report.py  test_device_identity.py  test_device_params.py  test_foundation.py  test_guided_merge.py  test_guided_merge_cli.py  test_guided_merge_safety.py  test_io_safety.py  test_merge_cli.py  test_merge_inputs.py  test_merge_option_contract.py  test_merge_phase2.py  test_merge_plan.py  test_merge_report.py  test_merge_semantics.py  test_midi_checks.py  test_plugin_versions.py  test_safety_regression.py  test_sample_search.py  test_services.py  test_watch.py
tests/fixtures/: all_checks.als  clean.als  frozen_returns.als  generate.py  generate_parser_fixtures.py  id_allocator.py  pointee_allocator.py
tests/gui/: conftest.py  test_app.py  test_compare_analysis.py  test_compare_result.py  test_dialogs.py  test_guided_merge_page.py  test_main_window.py  test_pages.py  test_settings.py  test_theme.py  test_three_way_parity.py  test_widgets.py  test_workers.py
tests/three_way/: fixtures.py  test_cli_extended.py  test_input_validation.py  test_locators.py  test_performance.py  test_property_invariants.py  test_report_consistency.py  test_robustness.py  test_sanity.py  test_tracks_devices.py
