[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "alscan"
version = "0.7.0"
description = "Ableton Live Project Health Scanner — analyze, version, and compare .als files"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [{ name = "Geoffrey McClinsey" }]
keywords = ["ableton", "live", "als", "music", "production", "scanner", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8",
    "lxml>=5",
    "rich>=13",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
gui = [
    "PySide6>=6.6",
    "pytest-qt>=4",
    "pytest-timeout>=2",
]

[project.urls]
Homepage = "https://github.com/geoffmcc/alscan"
Source = "https://github.com/geoffmcc/alscan"
Issues = "https://github.com/geoffmcc/alscan/issues"

[project.scripts]
alscan = "alscan.cli:cli"
alscan-gui = "alscan.gui.app:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"alscan" = ["report/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
